--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'org.springframework.boot' version '2.6.3'
+//    id 'org.springframework.boot' version '2.6.3'
+    id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -35,6 +36,9 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.8'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
+    /* swagger */
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     /* DB 관련 */
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
