--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("org.springframework.boot:spring-boot-devtools")
 
     /* thymeleaf 관련  */
     implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
@@ -53,7 +54,7 @@ dependencies {
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 
     /* DB 관련 */
-    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+//    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation('com.h2database:h2')
