--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 //    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
     implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    implementation('com.h2database:h2')
+//    implementation('com.h2database:h2')
     runtimeOnly 'mysql:mysql-connector-java'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
