- 홈 메뉴 변경 - 로그인/회원가입 수정 - SQL 로그 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,10 +48,10 @@ spring:
 #  config-location: classpath:/mapper/config/mybatis-config.xml
 
 # logging 설정
-logging:
-  level:
-    org:
-      hibernate:
-        type:
-          descriptor:
-            sql: trace
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        type:
+#          descriptor:
+#            sql: trace
