--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-web")
 
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.8'
+
     implementation("org.springframework.boot:spring-boot-starter-json")
     implementation group: 'org.msgpack', name: 'jackson-dataformat-msgpack', version: '0.8.18'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
