- querydsl로 변경작업 - 페이지에 따른 navigator 메뉴 색 변경 - 캐릭터 검색 기능 추가 - querydsl 사용에 따른 페이징 로직 변경

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     /* queryDSL */
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-core:${queryDslVersion}"
 
     /* DB 관련 */
 //    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
