--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 //    implementation('com.h2database:h2')
+
+    /* 이메일 전송 */
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
     runtimeOnly 'mysql:mysql-connector-java'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
