--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    /* ArchUnit */
+//    testImplementation 'com.tngtech.archunit:archunit-junit5-engine:0.12.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
