- 파일 저장 경로 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -89,3 +89,6 @@ chaos:
   monkey:
     watcher:
       repository: true
+
+file:
+  dir: C:/WorkSpace/ifland/src/main/resources/static/images/memory/
